@@ -1,0 +1,57 @@
+{
+  "customize": {
+    "extra_dir": "", 
+    "git_src_dir": "src", 
+    "install_env": {
+      "PACKAGE_AUTOGEN": "NO", 
+      "PACKAGE_BUILD_TYPE": "configure", 
+      "PACKAGE_NAME": "openmpi-4.0.0.tar.gz", 
+      "PACKAGE_NAME1": "openmpi-4.0.0.tar", 
+      "PACKAGE_NAME2": "openmpi-4.0.0", 
+      "PACKAGE_SKIP_CLEAN_INSTALL": "NO", 
+      "PACKAGE_SKIP_CLEAN_OBJ": "NO", 
+      "PACKAGE_SKIP_CLEAN_PACKAGE": "NO", 
+      "PACKAGE_SKIP_CLEAN_SRC_DIR": "NO", 
+      "PACKAGE_SKIP_CMAKE_TARGET": "YES", 
+      "PACKAGE_SUB_DIR": "openmpi-4.0.0", 
+      "PACKAGE_SUB_DIR1": "openmpi-4.0.0", 
+      "PACKAGE_UNGZIP": "YES", 
+      "PACKAGE_UNTAR": "YES", 
+      "PACKAGE_URL": "https://download.open-mpi.org/release/open-mpi/v4.0", 
+      "PACKAGE_WGET": "YES"
+    }, 
+    "version": "4.0.0"
+  }, 
+  "deps": {
+    "compiler": {
+      "local": "yes", 
+      "name": "C compiler", 
+      "sort": 10, 
+      "tags": "compiler,lang-c"
+    }
+  }, 
+  "end_full_path": {
+    "linux": "install/lib/libmpi.so"
+  }, 
+  "need_cpu_info": "yes", 
+  "only_for_host_os_tags": [], 
+  "only_for_target_os_tags": [
+    "linux"
+  ], 
+  "process_script": "install", 
+  "soft_uoa": "944935ffa276c08a", 
+  "suggested_path": "lib-openmpi", 
+  "tags": [
+    "lib", 
+    "mpi", 
+    "openmpi", 
+    "v4.0.0", 
+    "v4.0", 
+    "v4", 
+    "channel-stable"
+  ], 
+  "use_scripts_from_another_entry": {
+    "data_uoa": "cd9ccc74060b3d18", 
+    "module_uoa": "script"
+  }
+}
